--- a/index.html
+++ b/index.html
@@ -50,12 +50,50 @@
                 Automatiza y toma el control de tus procesos.
             </h1>
             <p class="sectParagrapho">
-                Te brindamos soluciones de ingeniería a la medida de sus necesidades, integrando tecnológicas informáticas al
+                Te brindamos soluciones de ingeniería a la medida de sus necesidades, integrando tecnológicas
+                informáticas al
                 campo industrial, con soluciones que cuidan el medio ambiente.
             </p>
             <a class="btn_freeConsult" href="/soluciones/">Consulta gratuita</a>
         </section>
     </header>
+    <main>
+        <section class="container aboutContainer">
+            <h2 class="subTitle">Somos ingeniería de soluciones</h2>
+            <p class="aboutParagraph">
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Mollitia tempora, at minus vel voluptatibus
+                accusantium suscipit reprehenderit repellat sequi cupiditate autem aut tenetur sit, iste sapiente.
+                Molestiae cum quisquam ipsam?
+            </p>
+            <div class="about">
+                <!--1-->
+                <article class="aboutArticle">
+                    <img class="aboutImg" src="./assetss/Imgs/Icos/home.svg" alt="noFoundImg"
+                        srcset="./assetss/Imgs/home.svg">
+                    <h3 class="aboutTitle">titulo</h3>
+                    <p class="aboutParagraph">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis
+                        accusantium itaque placeat incidunt!</p>
+                </article>
+                <!--2-->
+                <article class="aboutArticle">
+                    <img class="aboutImg" src="./assetss/Imgs/Icos/home.svg" alt="noFoundImg"
+                        srcset="./assetss/Imgs/home.svg">
+                    <h3 class="aboutTitle">2</h3>
+                    <p class="aboutParagraph">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis
+                        accusantium itaque placeat incidunt!</p>
+                </article>
+                <!--3-->
+                <article class="aboutArticle">
+                    <img class="aboutImg" src="./assetss/Imgs/Icos/home.svg" alt="noFoundImg"
+                        srcset="./assetss/Imgs/home.svg">
+                    <h3 class="aboutTitle">3</h3>
+                    <p class="aboutParagraph">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis
+                        accusantium itaque placeat incidunt!</p>
+                </article>
+            </div>
+
+        </section>
+    </main>
 </body>
 
 </html>
