--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     <a href="#" class="navLink">PRODUCTS</a>
                 </li>
                 <li class="navItems">
-                    <a href="#" class="navLink">ABOUT US</a>
+                    <a href="#aboutUS" class="navLink">ABOUT US</a>
                 </li>
             </ul>
 
@@ -58,7 +58,7 @@
         </section>
     </header>
     <main>
-        <section class="container aboutContainer">
+        <section id="aboutUS" class="container aboutContainer">
             <h2 class="subTitle">Somos ingeniería de soluciones</h2>
             <p class="aboutParagraph">
                 Lorem ipsum dolor sit amet consectetur, adipisicing elit. Mollitia tempora, at minus vel voluptatibus
@@ -68,30 +68,143 @@
             <div class="about">
                 <!--1-->
                 <article class="aboutArticle">
-                    <img class="aboutImg" src="./assetss/Imgs/Icos/home.svg" alt="noFoundImg"
-                        srcset="./assetss/Imgs/home.svg">
-                    <h3 class="aboutTitle">titulo</h3>
+                    <img class="aboutImg" src="./assetss/Imgs/Icos/home.svg" alt="noFoundImg">
+                    <h3 class="aboutTitle">Nuestra visión</h3>
                     <p class="aboutParagraph">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis
                         accusantium itaque placeat incidunt!</p>
                 </article>
                 <!--2-->
                 <article class="aboutArticle">
-                    <img class="aboutImg" src="./assetss/Imgs/Icos/home.svg" alt="noFoundImg"
-                        srcset="./assetss/Imgs/home.svg">
-                    <h3 class="aboutTitle">2</h3>
+                    <img class="aboutImg" src="./assetss/Imgs/Icos/btn_menu.svg" alt="noFoundImg">
+                    <h3 class="aboutTitle">Nuestra misión</h3>
                     <p class="aboutParagraph">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis
                         accusantium itaque placeat incidunt!</p>
                 </article>
                 <!--3-->
                 <article class="aboutArticle">
-                    <img class="aboutImg" src="./assetss/Imgs/Icos/home.svg" alt="noFoundImg"
-                        srcset="./assetss/Imgs/home.svg">
-                    <h3 class="aboutTitle">3</h3>
+                    <img class="aboutImg" src="./assetss/Imgs/Icos/row_r.svg" alt="noFoundImg">
+                    <h3 class="aboutTitle">Contáctanos</h3>
                     <p class="aboutParagraph">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis
                         accusantium itaque placeat incidunt!</p>
                 </article>
             </div>
+        </section>
+        <section class="container productsContainer">
+            <h2 class="Title">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae dignissimos exercitationem suscipit
+                aspernatur vero. Sint?
+            </h2>
+            <div class="products">
+                <div class="product">
+                    <figure>
+                        <img src="./assetss/Imgs/products/dashboard.png" alt="noFoundImg">
+                    </figure>
+                    <h2 class="subTitle">
+                        ARController
+                    </h2>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo alias ipsam numquam harum at quas
+                        nobis
+                        facilis rerum autem saepe.
+                    </p>
+                </div>
+                <div class="product">
+                    <figure>
+                        <img src="./assetss/Imgs/products/dashboard.png" alt="noFoundImg">
+                    </figure>
+                    <h2 class="subTitle">
+                        ARController
+                    </h2>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo alias ipsam numquam harum at quas
+                        nobis
+                        facilis rerum autem saepe.
+                    </p>
+                </div>
+                <div class="product">
+                    <figure>
+                        <img src="./assetss/Imgs/products/dashboard.png" alt="noFoundImg">
+                    </figure>
+                    <h2 class="subTitle">
+                        ARController
+                    </h2>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo alias ipsam numquam harum at quas
+                        nobis
+                        facilis rerum autem saepe.
+                    </p>
+                </div>
 
+                <div class="product">
+                    <figure>
+                        <img src="./assetss/Imgs/products/dashboard.png" alt="noFoundImg">
+                    </figure>
+                    <h2 class="subTitle">
+                        ARController
+                    </h2>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo alias ipsam numquam harum at quas
+                        nobis
+                        facilis rerum autem saepe.
+                    </p>
+                </div>
+                <div class="product">
+                    <figure>
+                        <img src="./assetss/Imgs/products/dashboard.png" alt="noFoundImg">
+                    </figure>
+                    <h2 class="subTitle">
+                        ARController
+                    </h2>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo alias ipsam numquam harum at quas
+                        nobis
+                        facilis rerum autem saepe.
+                    </p>
+                </div>
+                <div class="product">
+                    <figure>
+                        <img src="./assetss/Imgs/products/dashboard.png" alt="noFoundImg">
+                    </figure>
+                    <h2 class="subTitle">
+                        ARController
+                    </h2>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo alias ipsam numquam harum at quas
+                        nobis
+                        facilis rerum autem saepe.
+                    </p>
+                </div>
+                <div class="product">
+                    <figure>
+                        <img src="./assetss/Imgs/products/dashboard.png" alt="noFoundImg">
+                    </figure>
+                    <h2 class="subTitle">
+                        ARController
+                    </h2>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo alias ipsam numquam harum at quas
+                        nobis
+                        facilis rerum autem saepe.
+                    </p>
+                </div>
+                <div class="product">
+                    <figure>
+                        <img src="./assetss/Imgs/products/dashboard.png" alt="noFoundImg">
+                    </figure>
+                    <h2 class="subTitle">
+                        ARController
+                    </h2>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo alias ipsam numquam harum at quas
+                        nobis
+                        facilis rerum autem saepe.
+                    </p>
+                </div>
+                <div class="product">
+                    <figure>
+                        <img src="./assetss/Imgs/products/dashboard.png" alt="noFoundImg">
+                    </figure>
+                    <h2 class="subTitle">
+                        ARController
+                    </h2>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo alias ipsam numquam harum at quas
+                        nobis
+                        facilis rerum autem saepe.
+                    </p>
+                </div>
+            </div>
         </section>
     </main>
 </body>
