adapt vist movil

--- a/index.html
+++ b/index.html
@@ -12,11 +12,12 @@
     <title></title>
 </head>
 
-<body>
-    <header class="headerContainer container">
+<body class="container">
+    <header class="headerContainer ">
         <nav>
             <div class="home">
                 <div class="logo"></div>
+            <div class="btn_menu"></div>
                 <div class="slogan">
                     <h1 class="navTittle">Engineering group</h1>
                     <div class="divider"></div>
@@ -58,7 +59,7 @@
         </section>
     </header>
     <main>
-        <section id="aboutUS" class="container aboutContainer">
+        <section id="aboutUS" class=" aboutContainer">
             <h2 class="subTitle">Somos ingeniería de soluciones</h2>
             <p class="aboutParagraph">
                 Lorem ipsum dolor sit amet consectetur, adipisicing elit. Mollitia tempora, at minus vel voluptatibus
@@ -89,10 +90,9 @@
                 </article>
             </div>
         </section>
-        <section class="container productsContainer">
+        <section class=" productsContainer">
             <h2 class="Title">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae dignissimos exercitationem suscipit
-                aspernatur vero. Sint?
+                Top 10 de nuestros productos
             </h2>
             <div class="products">
                 <div class="product">
